clusters/alpha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prd-games-42wasd-admin
  labels:
    environment: prd
    app.kubernetes.io/managed-by: gitops
